--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -9,6 +9,7 @@ div.media-lib {
   flex-direction: column;
   border: solid 1px var(--color-border);
   color: var(--color-dark);
+  user-select: none;
 
   .media-lib-container {
     background-color: #f5f5f5;
@@ -75,6 +76,10 @@ div.media-lib {
       }
     }
   }
+
+  .media-lib-item * { pointer-events: none; }
+  .media-lib-item a { pointer-events: auto; }
+  .media-lib-drop-area .media-lib-item a { pointer-events: none; }
 
   div.media-lib-content {
     display: flex;
@@ -220,9 +225,6 @@ div.media-lib {
             a:hover { text-decoration: underline; }
 
             &.media-lib-item {
-              & > * { pointer-events: none; user-select: none; }
-              & a { pointer-events: auto; }
-
               &:hover { background-color: var(--color-light); }
               &.active > div.media-lib-item-container {
                 border: 1px solid var(--color-active);
