refactor(admin-ui): js in edit revision (DateTime, Reorder, Sortable, ..) (#770)

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -106,13 +106,16 @@
 
 {% block icontext_widget -%}
 	{% if  prefixIcon or prefixText or suffixIcon or suffixText %}
+        {% if not valid or errors|length > 0 %}
+            {% set attr = attr|merge({class: attr.class|default('') ~ ' is-invalid'}) %}
+        {% endif %}
 		<div class="input-group">
 			{% if prefixIcon or prefixText %}
-				<span class="input-group-addon"><i class="{% if prefixIcon %}{{ prefixIcon }}{% endif %}"></i>{% if prefixText %} &nbsp; {{ prefixText }} {% endif %}</span>
+				<span class="input-group-text"><i class="{% if prefixIcon %}{{ prefixIcon }}{% endif %}"></i>{% if prefixText %} &nbsp; {{ prefixText }} {% endif %}</span>
 			{% endif %}
 		 	{{ block('form_widget') }}
 			{% if suffixIcon or suffixText %}
-				<span class="input-group-addon"><i class="{% if suffixIcon %}{{ suffixIcon }}{% endif %}"></i>{% if suffixText %} &nbsp; {{ suffixText }} {% endif %}</span>
+				<span class="input-group-text"><i class="{% if suffixIcon %}{{ suffixIcon }}{% endif %}"></i>{% if suffixText %} &nbsp; {{ suffixText }} {% endif %}</span>
 			{% endif %}
 		</div>
 	{% else %}
@@ -960,19 +963,19 @@
 {% endblock datefieldtype_row %}
 
 {% block date_time_field_type_row %}
-	<div class="form-group">
-		<div id="{{ form.vars.id}}__label">
-			{{ form_label(form.value) }}
-		</div>
+	<div class="mb-3">
+        {{ form_label(form.value) }}
 		<div class="input-group">
-			<div class="input-group-addon">
-				<i class="fa fa-calendar"></i>
-			</div>
-			{{- form_widget(form.value) -}}
+            <span class="input-group-text">
+                <i class="fa fa-calendar"></i>
+            </span>
+            {% if errors|length > 0 or not valid %}
+                {{- form_widget(form.value, { 'attr': {'class': form.value.vars.attr.class|default('') ~ ' is-invalid'} }) -}}
+            {% else %}
+                {{- form_widget(form.value) -}}
+            {% endif %}
 		</div>
-		<div class="has-error"  id="{{ form.vars.id}}__error">
-			{{- form_errors(form) -}}
-		</div>
+        {{- form_errors(form) -}}
 	</div>
 {% endblock date_time_field_type_row %}
 
