--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
@@ -1199,9 +1199,9 @@
             {% endif %}
         </dt>
         <dd>
-            <ul>
+            {% if dataField.rawData is iterable %}<ul>{% endif %}
                 {{ emsco_diff_date(dataField.rawData, compare, dataField.fieldType.name, compareRawData, dataField.fieldType.displayOption('parseFormat', 'd/m/Y H:i:s')) }}
-            </ul>
+            {% if dataField.rawData is iterable %}</ul>{% endif %}
         </dd>
     </dl>
     {{ _self.messages(dataField) }}
