--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -969,11 +969,9 @@
             <span class="input-group-text">
                 <i class="fa fa-calendar"></i>
             </span>
-            {% if errors|length > 0 or not valid %}
-                {{- form_widget(form.value, { 'attr': {'class': form.value.vars.attr.class|default('') ~ ' is-invalid'} }) -}}
-            {% else %}
-                {{- form_widget(form.value) -}}
-            {% endif %}
+            {{- form_widget(form.value, { 'attr': {'class': html_classes(form.value.vars.attr.class|default(''), {
+                'is-invalid': errors|length > 0 or not valid,
+            })} }) -}}
 		</div>
         {{- form_errors(form) -}}
 	</div>
