fix: dropdown-item

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
@@ -38,15 +38,19 @@
 						</button>
 						<ul class="dropdown-menu">
 							{% if form.copy is defined %}
-								<li>{{ form_widget(form.copy) }}</li>
+								<li>{{ form_widget(form.copy, { attr: {
+                                        class: 'dropdown-item'
+                                    } }) }}</li>
 							{% endif %}
 							{% if form.paste is defined %}
-								<li>{{ form_widget(form.paste) }}</li>
+								<li>{{ form_widget(form.paste, { attr: {
+                                        class: 'dropdown-item'
+                                    } }) }}</li>
 							{% endif %}
 							<li>
 								{% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
 									'url': path('revision.cancel', {'revision': revision.id}),
-									'btnClass': '',
+									'btnClass': 'dropdown-item',
 									'label': 'views.data.edit-revision-html.cancel-label'|trans,
 									'icon': 'remove'
 								}%}
