--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/post-button.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/post-button.html.twig
@@ -22,7 +22,7 @@
 		<li>
 			<a href="{{ url }}"
 			   data-post-settings="{{ settings|json_encode|escape('html_attr') }}"
-			   class="core-post-button">{{ message|trans({'%label%' : itemLabel|default('%label%')}) }}</a>
+			   class="core-post-button dropdown-item">{{ message|trans({'%label%' : itemLabel|default('%label%')}) }}</a>
 		</li>
 	  </ul>
 	</div>
