--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -952,7 +952,9 @@
         <span class="input-group-text">
             <i class="fa fa-calendar"></i>
         </span>
-        {{- form_widget(form.value) -}}
+        {{- form_widget(form.value, { 'attr': {'class': html_classes(form.value.vars.attr.class|default(''), {
+            'is-invalid': errors|length > 0 or not valid,
+        })} }) -}}
 	</div>
     {{- form_errors(form) -}}
 </div>
