--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search.html.twig
@@ -238,7 +238,7 @@
 						{% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
 							'url':  path('search.publish', app.request.query.all ),
 							'label': 'Publish '~response.formattedTotal|default('not-applicable'|trans)~' '~form.contentTypes.vars.value.0|get_content_type.pluralName,
-							'icon': 'glyphicon glyphicon-open'
+							'icon': 'fa fa-upload'
 						} %}
 					</div>
 				</div>
