--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/object-views-button.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/object-views-button.html.twig
@@ -22,7 +22,7 @@
 									source: source
 								}) %}
 
-    							<li class="{% if not link %}disabled{% endif %}"><a href="{{ link }}" target="_blank">
+    							<li class="{% if not link %}disabled{% endif %}"><a href="{{ link }}" target="_blank" class="dropdown-item">
     								<i class="{{ template.icon|raw }}"></i>
     								{{ template.label}}
     								<i class="fa fa-external-link float-end"></i>
@@ -40,14 +40,14 @@
 							{%- endif -%}
 						{% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::NOTIFICATION') %}
 							{% if ( is_granted(template.role) and ((attribute(source, contentType.circlesField) is not defined) or (source and attribute(source, contentType.circlesField)|emsco_in_my_circles) or (environment.circles|emsco_in_my_circles and is_granted('ROLE_PUBLISHER')) ) ) %}
-								<li><a href='#' class="request-notification" data-template-id="{{template.id|e('html_attr')}}" data-environment-name="{{environment.name|e('html_attr')}}" data-content-type-id="{{contentType.id|e('html_attr')}}" data-ouuid="{{ouuid|e('html_attr')}}" href="#" data-url="{{ path('notification.ajaxnotification', {'objectId' : ouuid}) }}">
+								<li><a href='#' class="request-notification dropdown-item" data-template-id="{{template.id|e('html_attr')}}" data-environment-name="{{environment.name|e('html_attr')}}" data-content-type-id="{{contentType.id|e('html_attr')}}" data-ouuid="{{ouuid|e('html_attr')}}" href="#" data-url="{{ path('notification.ajaxnotification', {'objectId' : ouuid}) }}">
 									<i class="{{ template.icon|raw }}"></i>
 									{{ template.label }}
 								</a></li>
 							{% endif %}
                         {% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::JOB') %}
             				{% if (is_granted(template.role)) or template.role == "not-defined" %}
-								<li><a href="#" class="request_job" data-url="{{ path('ems_job_custom_view', {'environmentName': environment.name, 'templateId': template.id, 'ouuid': ouuid}) }}">
+								<li><a href="#" class="request_job dropdown-item" data-url="{{ path('ems_job_custom_view', {'environmentName': environment.name, 'templateId': template.id, 'ouuid': ouuid}) }}">
 									<i class="{{ template.icon|raw }}"></i>
 									{{ template.label }}
 								</a></li>
@@ -55,13 +55,13 @@
 						{% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::IMPORT') %}
 							{%- if (is_granted(template.role)) or template.role == "not-defined" -%}
 								{%- set importModalUrl = path('emsco_data_action_import',  { 'actionId': template.id, 'ouuid': ouuid})  -%}
-								<li><a href="#" data-ajax-modal-url="{{ importModalUrl }}" data-ajax-modal-size="md"><i class="{{ template.icon|raw }}"></i>{{ template.label }}</a></li>
+								<li><a href="#" data-ajax-modal-url="{{ importModalUrl }}" data-ajax-modal-size="md" class="dropdown-item"><i class="{{ template.icon|raw }}"></i>{{ template.label }}</a></li>
 							{%- endif -%}
 						{% else %}
 							<li><a href="{{ path(template.public?'ems_data_custom_template_public':'ems_data_custom_template_protected', {
 										environmentName: environment.name,
 										ouuid: ouuid,
-										templateId: template.id}) }}" >
+										templateId: template.id}) }}" class="dropdown-item">
 								<i class="{{ template.icon|raw }}"></i>
 								{{ template.label }}
 							</a></li>
@@ -73,7 +73,7 @@
 				{% endfor %}
 				{% if is_granted('ROLE_COPY_PASTE') %}
 					<li>
-						<a href="{{ path('revision.copy', {'environment': environment.name, 'type': contentType.name, 'ouuid': ouuid} ) }}">
+						<a href="{{ path('revision.copy', {'environment': environment.name, 'type': contentType.name, 'ouuid': ouuid} ) }}" class="dropdown-item">
 							<i class="{{ 'views.elements.object-views-button.copy-data-icon-class'|trans }}"></i>
 							{{ 'views.elements.object-views-button.copy-data'|trans }}
 						</a>
@@ -84,12 +84,12 @@
 								'url': path('emsco_duplicate_revision', {'environment': environment.name, 'type': contentType.name, 'ouuid': ouuid}),
 								'label': 'Duplicate',
 								'icon': 'clone',
-								'btnClass': ''
+								'btnClass': 'dropdown-item'
 							}%}
 						</li>
 					{% endif %}
 					<li>
-						<a href="{{ path('data.view', {'environmentName': environment.name, 'type': contentType.name, 'ouuid': ouuid} ) }}">
+						<a href="{{ path('data.view', {'environmentName': environment.name, 'type': contentType.name, 'ouuid': ouuid} ) }}" class="dropdown-item">
 							<i class="{{ 'views.elements.object-views-button.raw-view-icon-class'|trans }}"></i>
 							{{ 'views.elements.object-views-button.raw-view'|trans }}
 						</a>
