--- a/demo/skeleton/template_ems/dashboard/media_library.twig
+++ b/demo/skeleton/template_ems/dashboard/media_library.twig
@@ -1,7 +1,7 @@
 {% block body %}
     {{ component('media_library', {
         'id': 'examaple-media-lib',
-        'template': _self
+        'template': _self,
     }) }}
 {% endblock body %}
 
@@ -9,26 +9,18 @@
 
 {% block css %}{% endblock css %}
 
-{%- block media_lib_file_row_header -%}
-    <li>
-        <div class="media-lib-item-container">
-            <div>Name</div>
-            <div>Type</div>
-            <div>Revision</div>
-            <div class="text-right">Size</div>
-        </div>
-    </li>
-{%- endblock media_lib_file_row_header -%}
+{%- block media_lib_file_header -%}
+    <div>Name</div>
+    <div>Type</div>
+    <div>Revision</div>
+    <div class="text-right">Size</div>
+{%- endblock media_lib_file_header -%}
 
-{%- block media_lib_file_row -%}
-    <li class="media-lib-item" data-id="{{- mediaFile.id -}}">
-        <div class="media-lib-item-container">
-            <div><a href="{{- mediaFile.urlView -}}" download="{{- mediaFile.name -}}" data-ems-id="{{- mediaFile.emsId -}}">{{- mediaFile.name -}}</a></div>
-            <div>{{- mediaFile.file.mimetype|trans({}, 'emsco-mimetypes') -}}</div>
-            <div><a href="{{ path('emsco_view_revisions', { 'type': mediaFile.document.contentType, 'ouuid': mediaFile.id  }) }}">show revision</a></div>
-            <div class="text-right">{{- mediaFile.file.filesize|format_bytes -}}</div>
-        </div>
-    </li>
-{%- endblock media_lib_file_row -%}
+{%- block media_lib_file -%}
+    <div><a href="{{- mediaFile.urlView -}}" download="{{- mediaFile.name -}}" data-ems-id="{{- mediaFile.emsId -}}">{{- mediaFile.name -}}</a></div>
+    <div>{{- mediaFile.file.mimetype|trans({}, 'emsco-mimetypes') -}}</div>
+    <div><a href="{{ path('emsco_view_revisions', { 'type': mediaFile.document.contentType, 'ouuid': mediaFile.id  }) }}">show revision</a></div>
+    <div class="text-right">{{- mediaFile.file.filesize|format_bytes -}}</div>
+{%- endblock media_lib_file -%}
 
 
