--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search-form-filter.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search-form-filter.html.twig
@@ -3,75 +3,80 @@
 	<div class="card card-{{ theme_color }} card-outline">
 		<div id="searchFormBoxBody" class="collapse {% if openSearchForm is defined and openSearchForm %}in{% endif %}" aria-expanded="{% if openSearchForm is not defined or not openSearchForm %}false{%else%}true{% endif %}">
 			<div class="card-body" >
-				<div class="row">
-					{% if form.environments is defined %}
-						<div class=" col-md-3 col-6">
-							{{ form_row(form.environments) }}
-						</div>
-					{% endif %}
-					{% if form.contentTypes is defined %}
-						<div class=" col-md-4 col-6">
-							{{ form_row(form.contentTypes) }}
-						</div>
-					{% endif %}
-					{% if form.sortBy is defined %}
-						<div class=" col-md-3 col-6">
-							{{ form_row(form.sortBy) }}
-						</div>
-					{% endif %}
-					{% if form.sortBy is defined %}
-						<div class=" col-md-2 col-6">
-							{{ form_row(form.sortOrder) }}
-						</div>
-					{% endif %}
-				</div>
-				<div class="row" id="list-of-search-filters" data-prototype="{{ form_row(form.filters.vars.prototype)|e }}" data-index="{{ form.filters|length }}">
-					<div class="col-12 d-none d-md-block"> {# hide on mobile? (syv) #}
-						<div class="col-md-2">
-							<div class="form-group">
-								<label class="control-label">Boolean clause</label>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="form-group">
-								<label class="control-label">Field</label>
-							</div>
-						</div>
-						<div class="col-md-2">
-							<div class="form-group">
-								<label class="control-label">Operator</label>
-							</div>
-						</div>
-						<div class="{% if emsco_is_super() %}col-md-3{% else %}col-md-4{% endif %}">
-							<div class="form-group">
-								<label class="control-label">Pattern</label>
-							</div>
-						</div>
-						{% if emsco_is_super() %}
-							<div class="col-md-1">
-								<div class="form-group">
-									<label class="control-label">Boost</label>
-								</div>
-							</div>
-						{% endif %}
-						<div class="col-md-1">
-							<div class="form-group">
-								<label class="control-label">&nbsp;</label>
-							</div>
-						</div>
-
-						{{- form_errors(form) -}}
-					</div>
-					{{ form_widget(form.filters) }}
-				</div>
-				<div class="row">
-					{% if form.minimumShouldMatch is defined %}
-						<div class=" col-md-3 col-6">
-							{{ form_row(form.minimumShouldMatch) }}
-						</div>
-					{% endif %}
-				</div>
-			</div>
+                <div class="row">
+                    {% if form.environments is defined %}
+                        <div class=" col-md-3 col-6">
+                            {{ form_row(form.environments) }}
+                        </div>
+                    {% endif %}
+                    {% if form.contentTypes is defined %}
+                        <div class=" col-md-4 col-6">
+                            {{ form_row(form.contentTypes) }}
+                        </div>
+                    {% endif %}
+                    {% if form.sortBy is defined %}
+                        <div class=" col-md-3 col-6">
+                            {{ form_row(form.sortBy) }}
+                        </div>
+                    {% endif %}
+                    {% if form.sortBy is defined %}
+                        <div class=" col-md-2 col-6">
+                            {{ form_row(form.sortOrder) }}
+                        </div>
+                    {% endif %}
+                </div>
+                <div class="row" id="list-of-search-filters" data-prototype="{{ form_row(form.filters.vars.prototype)|e }}" data-index="{{ form.filters|length }}">
+                    <div class=" d-sm-none d-md-block">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label class="control-label">Boolean clause</label>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label class="control-label">Field</label>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label class="control-label">Operator</label>
+                                </div>
+                            </div>
+                            <div class="{% if emsco_is_super() %}col-md-3{% else %}col-md-4{% endif %}">
+                                <div class="form-group">
+                                    <label class="control-label">Pattern</label>
+                                </div>
+                            </div>
+                            {% if emsco_is_super() %}
+                                <div class="col-md-1">
+                                    <div class="form-group">
+                                        <label class="control-label">Boost</label>
+                                    </div>
+                                </div>
+                            {% endif %}
+                            <div class="col-md-1">
+                                <div class="form-group">
+                                    <label class="control-label">&nbsp;</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        {{- form_errors(form) -}}
+                    </div>
+                    <div class="row">
+                        {{ form_widget(form.filters) }}
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    {% if form.minimumShouldMatch is defined %}
+                        <div class=" col-md-3 col-6">
+                            {{ form_row(form.minimumShouldMatch) }}
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
 
 			<div class="card-footer">
 				<div class="form-group">
