--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -400,11 +400,11 @@
 
 
 {% block search_filter_row -%}
-	<div class="filter-container row">
-		<div class="col-xs-12">
-			<div class="col-md-2  col-sm-3 col-xs-4">
+	<div class="filter-container ">
+		<div class="row">
+			<div class="col-md-2 col-sm-3 col-xs-4">
 				<div class="form-group">
-					<div class="visible-xs-block visible-sm-block">
+					<div class="d-block d-md-none">
 						{{ form_label(form.booleanClause) }}
 					</div>
 					{{- form_widget(form.booleanClause) -}}
@@ -412,7 +412,7 @@
 			</div>
 			<div class="col-md-3 col-sm-5 col-xs-4">
 				<div class="form-group">
-					<div class="visible-xs-block visible-sm-block">
+					<div class="d-block d-md-none">
 						{{ form_label(form.field) }}
 					</div>
 					{{- form_widget(form.field) -}}
@@ -420,16 +420,16 @@
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-4">
 				<div class="form-group">
-					<div class="visible-xs-block visible-sm-block">
+					<div class="d-block d-md-none">
 						{{ form_label(form.operator) }}
 					</div>
 					{{- form_widget(form.operator) -}}
 				</div>
 			</div>
-			<div class="clearfix visible-sm-block visible-xs-block"></div>
+			<div class="d-block d-md-none"></div>
 			<div class="{% if emsco_is_super() %}col-md-3 col-xs-8{% else %}col-md-4 col-xs-10{% endif %}">
 				<div class="form-group">
-					<div class="visible-xs-block visible-sm-block">
+					<div class="d-block d-md-none">
 						{{ form_label(form.pattern) }}
 					</div>
 					{{- form_widget(form.pattern) -}}
@@ -438,7 +438,7 @@
 			{% if emsco_is_super() %}
 				<div class="col-md-1 col-xs-2">
 					<div class="form-group">
-						<div class="visible-xs-block visible-sm-block">
+						<div class="d-block d-md-none">
 							{{ form_label(form.boost) }}
 						</div>
 						{{- form_widget(form.boost) -}}
@@ -447,16 +447,14 @@
 			{% endif %}
 			<div class="col-md-1  col-xs-2">
 				<div class="form-group">
-					<div class="visible-xs-block visible-sm-block">
+					<div class="d-block d-md-none">
 						<label class="control-label">&nbsp;</label>
 					</div>
-{# 					<fieldset class="btn-group">#}
-						{% if form.vars.name != '0'  %}
-							<a class="btn btn-primary remove-filter form-control" href="#">
-								<i class="fa fa-trash"></i>
-							</a>
-						{% endif %}
-{# 					</fieldset>#}
+                    {% if form.vars.name != '0'  %}
+                        <a class="btn btn-primary remove-filter form-control" href="#">
+                            <i class="fa fa-trash"></i>
+                        </a>
+                    {% endif %}
 				</div>
 			</div>
 
