ref: glyphicon-export => fa-archive

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/export-search.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/export-search.html.twig
@@ -13,7 +13,7 @@
             <div class="card card-{{ theme_color }} card-outline">
                 <div class="card-header">
                     <h3>
-                        <i class="glyphicon glyphicon-export"></i>
+                        <i class="fa fa-archive"></i>
                         {{ 'views.elasticsearch.export-search.title'|trans }}
                     </h3>
                 </div>
