--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -49,12 +49,19 @@ div.media-lib {
     border-bottom: 1px solid var(--color-border);
     display: flex;
     align-items: center;
-    padding: 0 8px;
+    justify-content: space-between;
 
     .media-lib-container {
+      padding: 8px;
       display: flex;
       flex-wrap: wrap;
       gap: 8px;
+    }
+
+    input.media-lib-search {
+      border-color: var(--color-border);
+      &:focus { outline: none; border-color: var(--color-border); }
+      &.active { border: 1px solid var(--color-active); }
     }
 
     ul.media-lib-list-breadcrumb {
